--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/steven-tran-102000/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/stran102000?tab=repositories"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -102,20 +100,28 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div>Computer Science - Software Engineering Track</div>
+                            <p>GPA: 3.465</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Normandale Community College</h3>
+                            <div class="subheading mb-3">Postsecondary Enrollment Option</div>
+                            <p>GPA: 3.46</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Shakopee Senior High School</h3>
+                            <div class="subheading mb-3">Highschool Degree</div>
+                            <p>GPA: 3.59</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2015 - June 2019</span></div>
                     </div>
                 </div>
             </section>
