--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         9298 Creek Way, Savage MN 55378 · (612) 735-7783 ·
-                        <a href="mailto:name@email.com">stran102000@email.com</a>
+                        <a href="mailto:name@email.com">stran102000@gmail.com</a>
                     </div>
                     <p class="lead mb-5">TO BE FINISHED</p>
                     <div class="social-icons">
@@ -101,8 +101,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Software Engineering Track</div>
+                            <div class="subheading mb-3">College of Science and Engineering</div>
+                            <div>Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
