Testing target for links

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </div>
                     <p class="lead mb-5">TO BE FINISHED</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/steven-tran-102000/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/stran102000?tab=repositories"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/steven-tran-102000/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" target="_blank" href="https://github.com/stran102000?tab=repositories"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
