Fixed spacing for education section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Tran
-                        <span class="text-primary">Steven</span>
+                        Steven
+                        <span class="text-primary">Tran</span>
                     </h1>
                     <div class="subheading mb-5">
-                        9298 Creek Way, Savage MN 55378 · (612) 735-7783 ·
+                        9298 Creek Way Savage, MN 55378 · (612) 735-7783 ·
                         <a href="mailto:name@email.com">stran102000@gmail.com</a>
                     </div>
                     <p class="lead mb-5">TO BE FINISHED</p>
@@ -102,7 +102,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering</div>
-                            <div>Bachelor of Science in Computer Science</div>
+                            <div class="subheading mb-3">Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
