Fixed spacing for education section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="subheading mb-3">Amazon</div>
                             <p>Description</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -101,8 +101,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
-                            <div class="subheading mb-3">College of Science and Engineering</div>
-                            <div class="subheading mb-0">Bachelor of Science in Computer Science</div>
+                            <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
