Added about section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
                         9298 Creek Way Savage, MN 55378 · (612) 735-7783 ·
                         <a href="mailto:name@email.com">stran102000@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">TO BE FINISHED</p>
+                    <p class="lead mb-5">
+                        Hello! My name is Steven and I enjoy creating things that make people laugh, have fun, or make their
+                        lives a little bit easier. My interest in software started back in 2013 when I decided to try and
+                        make a maze game on scratch - who knew that a couple of code blocks was why I got where I am today!
+
+                        Fast-forward to today, I have had the privilege of being a Teaching Assistant at the University of
+                        Minnesota for almost 2 years, Interning at a huge corporation, and being a part of Hackathon. My main
+                        focus as of today is designing and maintaining new software for the RFID team for Target.
+
+                        In my free time I enjoy boating out on the lake with my friends in the summer. In the winter I also like
+                        going out to the lake when it freezes over and ice skate or play hockey.</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/steven-tran-102000/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/stran102000?tab=repositories"><i class="fab fa-github"></i></a>
