--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                     <p class="lead mb-5">
                         Hello! My name is Steven and I enjoy creating things that make people laugh, have fun, or make their
                         lives a little bit easier. My interest in software started back in 2013 when I decided to try and
-                        make a maze game on scratch - who knew that a couple of code blocks was why I got where I am today!
-
+                        make a maze game on scratch - who knew that a couple of code blocks would be the reason why I am here
+                        today! </p>>
+                    <p class="lead mb-5">
                         Fast-forward to today, I have had the privilege of being a Teaching Assistant at the University of
                         Minnesota for almost 2 years, Interning at a huge corporation, and being a part of Hackathon. My main
                         focus as of today is designing and maintaining new software for the RFID team for Target.
-
+                    </p>
+                    <p class="lead mb-5">
                         In my free time I enjoy boating out on the lake with my friends in the summer. In the winter I also like
                         going out to the lake when it freezes over and ice skate or play hockey.</p>
                     <div class="social-icons">
