--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Hello! My name is Steven and I enjoy creating things that make people laugh, have fun, or make their
                         lives a little bit easier. My interest in software started back in 2013 when I decided to try and
                         make a maze game on scratch - who knew that a couple of code blocks would be the reason why I am here
-                        today! </p>>
+                        today! </p>
                     <p class="lead mb-5">
                         Fast-forward to today, I have had the privilege of being a Teaching Assistant at the University of
                         Minnesota for almost 2 years, Interning at a huge corporation, and being a part of Hackathon. My main
@@ -114,6 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
+                            <img src="assets/img/umn_logo.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
                             <p>GPA: 3.465</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
