--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
-                            <img src="assets/img/umn_logo.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:auto;">
                             <p>GPA: 3.465</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2022</span></div>
