Added normandale and updated umn size

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:285px;height:179px;">
+                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:142px;height:60px;">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
@@ -121,6 +121,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <img src="assets/img/normandale.jpg" alt="Normandale Logo" style="width:80;height:80">
                             <h3 class="mb-0">Normandale Community College</h3>
                             <div class="subheading mb-3">Postsecondary Enrollment Option</div>
                             <p>GPA: 3.46</p>
