--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:142px;height:60px;">
+                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:285px;height:179px;">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
@@ -130,6 +130,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:100;height:86">
                             <h3 class="mb-0">Shakopee Senior High School</h3>
                             <div class="subheading mb-3">Highschool Degree</div>
                             <p>GPA: 3.59</p>
