Added logo and index

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/normandale.jpg" alt="Normandale Logo" style="width:80;height:80">
+                            <img src="assets/img/normandale_2.jpg" alt="Normandale Logo" style="width:auto;height:auto">
                             <h3 class="mb-0">Normandale Community College</h3>
                             <div class="subheading mb-3">Postsecondary Enrollment Option</div>
                             <p>GPA: 3.46</p>
