--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:13;height:11">
+                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:fit-content;height:fit-content">
                             <h3 class="mb-0">Shakopee Senior High School</h3>
                             <div class="subheading mb-3">Highschool Degree</div>
                             <p>GPA: 3.59</p>
