--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/normandale_2.jpg" alt="Normandale Logo" style="width:16;height:19">
+                            <img src="assets/img/normandale_2.jpg" alt="Normandale Logo" style="width:8;height:10">
                             <h3 class="mb-0">Normandale Community College</h3>
                             <div class="subheading mb-3">Postsecondary Enrollment Option</div>
                             <p>GPA: 3.46</p>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:fit-content;height:fit-content">
+                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:10;height:10">
                             <h3 class="mb-0">Shakopee Senior High School</h3>
                             <div class="subheading mb-3">Highschool Degree</div>
                             <p>GPA: 3.59</p>
