--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <img src="assets/img/umn_logo.jpg" alt="UMN Logo" style="width:160px;height:auto;">
+                            <img src="assets/img/UMN.jpg" alt="UMN Logo" style="width:auto;height:auto;">
                             <h3 class="mb-0">University of Minnesota - Twin Cities</h3>
                             <div class="subheading mb-3">College of Science and Engineering - Bachelor of Science in Computer Science</div>
                             <p>GPA: 3.465</p>
