added image to job testing

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <img src="assets/img/UMN.jpg" alt="UMN Logo" style="width:auto;height:auto;">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3">University of Minnesota - College of Science and Engineering</div>
                             <p>Description</p>
