--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/normandale_2.jpg" alt="Normandale Logo" style="width:auto;height:70">
+                            <img src="assets/img/NORM.jpg" alt="Normandale Logo" style="width:auto;height:70">
                             <h3 class="mb-0">Normandale Community College</h3>
                             <div class="subheading mb-3">Postsecondary Enrollment Option</div>
                             <p>GPA: 3.46</p>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <img src="assets/img/shakopee_logo.jpg" alt="Shakopee Logo" style="width:auto;height:80">
+                            <img src="assets/img/SHS.jpg" alt="Shakopee Logo" style="width:auto;height:80">
                             <h3 class="mb-0">Shakopee Senior High School</h3>
                             <div class="subheading mb-3">Highschool Degree</div>
                             <p>GPA: 3.59</p>
