Added Pictures for Experience

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <img src="assets/img/TRGT.jpg" alt="Target Logo" style="width:auto;height:auto;">
                             <h3 class="mb-0">Software Engineer L4</h3>
                             <div class="subheading mb-3">Target</div>
                             <p>Description</p>
@@ -81,6 +82,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <img src="assets/img/AMZN.jpg" alt="Amazon Logo" style="width:auto;height:auto;">
                             <h3 class="mb-0">Software Development Engineer Intern</h3>
                             <div class="subheading mb-3">Amazon</div>
                             <p>Description</p>
@@ -98,6 +100,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
+                            <img src="assets/img/BBY.jpg" alt="Bestbuy Logo" style="width:auto;height:auto;">
                             <h3 class="mb-0">Customer Service</h3>
                             <div class="subheading mb-3">Bestbuy</div>
                             <p>Description</p>
