--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." /></span>
+                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." style="width:auto;height:100px;">
                         Steven
                         <span class="text-primary">Tran</span>
                     </h1>
