--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
+                    <h1>
+                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." /></span>
+                    </h1>
                     <h1 class="mb-0">
-                        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." style="width:auto;height:100px;">
                         Steven
                         <span class="text-primary">Tran</span>
                     </h1>
