--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1>
-                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." /></span>
+                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/main_picture.jpg" alt="..." style="width:100px;height:auto;" /></span>
                     </h1>
                     <h1 class="mb-0">
                         Steven
