--- a/index.html
+++ b/index.html
@@ -215,109 +215,113 @@
             <hr class="m-0" />
             <!-- Projects-->
             <section class="resume-section" id="projects">
+                <h2 class="mb-5">Projects</h2>
+
                 <div class="resume-section-content">
-                    <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal1">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Neural Model Library</h4>
-                              <p class="mb-0">Simple creation of feed forward and recurrent neural models in TensorFlow.</p>
+                    <div class="row no-gutters">
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal1">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Neural Model Library</h4>
+                                <p class="mb-0">Simple creation of feed forward and recurrent neural models in TensorFlow.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/neural_model.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal2">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>NN Trainer Library</h4>
-                              <p class="mb-0">A library for automatic supervised training of neural models.</p>
+                            <img class="img-fluid portfolio-img" src="/img/neural_model.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal2">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>NN Trainer Library</h4>
+                                <p class="mb-0">A library for automatic supervised training of neural models.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/nn_trainer.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal3">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>NN Experiments</h4>
-                              <p class="mb-0">A collection of various neural network models in TensorFlow.</p>
+                            <img class="img-fluid portfolio-img" src="/img/nn_trainer.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal3">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>NN Experiments</h4>
+                                <p class="mb-0">A collection of various neural network models in TensorFlow.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/nn_experiments.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal4">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Collage Generator</h4>
-                              <p class="mb-0">Intelligently draws a message with images.</p>
+                            <img class="img-fluid portfolio-img" src="/img/nn_experiments.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal4">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Collage Generator</h4>
+                                <p class="mb-0">Intelligently draws a message with images.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/collage_small.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal5">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>OpenGL Game Engine</h4>
-                              <p class="mb-0">A custom game engine including dynamic lighting, terrain, and static and dynamic objects.</p>
+                            <img class="img-fluid portfolio-img" src="/img/collage_small.jpg" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal5">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>OpenGL Game Engine</h4>
+                                <p class="mb-0">A custom game engine including dynamic lighting, terrain, and static and dynamic objects.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" height="250" src="/img/gameengine_small.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal6">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Ray Casting Simulation</h4>
-                              <p class="mb-0">A simulation using AI techniques such as ray casting, spatial mapping, Bayesian filtering, pathfinding, etc.</p>
+                            <img class="img-fluid portfolio-img" height="250" src="/img/gameengine_small.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal6">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Ray Casting Simulation</h4>
+                                <p class="mb-0">A simulation using AI techniques such as ray casting, spatial mapping, Bayesian filtering, pathfinding, etc.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/raycast_small_gray.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal7">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Seam Carver</h4>
-                              <p class="mb-0">An application for content-aware image resizing.</p>
+                            <img class="img-fluid portfolio-img" src="/img/raycast_small_gray.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal7">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Seam Carver</h4>
+                                <p class="mb-0">An application for content-aware image resizing.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/seamcarver_small.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal8">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Object Tracker</h4>
-                              <p class="mb-0">An object recognition and tracking tool.</p>
+                            <img class="img-fluid portfolio-img" src="/img/seamcarver_small.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal8">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Object Tracker</h4>
+                                <p class="mb-0">An object recognition and tracking tool.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/objecttracker-small.png" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-4">
-                        <a class="portfolio-item" data-toggle="modal" href="#portfolioModal9">
-                          <span class="caption">
-                            <span class="caption-content">
-                              <h4>Audio Analyzer</h4>
-                              <p class="mb-0">An audio analyzer and controller for an Arduino-driven LED strip.</p>
+                            <img class="img-fluid portfolio-img" src="/img/objecttracker-small.png" alt="">
+                          </a>
+                        </div>
+                        <div class="col-lg-4">
+                          <a class="portfolio-item" data-toggle="modal" href="#portfolioModal9">
+                            <span class="caption">
+                              <span class="caption-content">
+                                <h4>Audio Analyzer</h4>
+                                <p class="mb-0">An audio analyzer and controller for an Arduino-driven LED strip.</p>
+                              </span>
                             </span>
-                          </span>
-                          <img class="img-fluid portfolio-img" src="/img/audioanalyzer_small.png" alt="">
-                        </a>
+                            <img class="img-fluid portfolio-img" src="/img/audioanalyzer_small.png" alt="">
+                          </a>
+                        </div>
                       </div>
 
 
-                    <h2 class="mb-5">Projects</h2>
+                    
                     <p> Example: Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
