--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
 
-                    
+
                     <div class="row no-gutters">
                         <div class="col-lg-4">
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal1">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Neural Model Library</h4>
+                                <h4>Voting Simulation</h4>
                                 <p class="mb-0">Simple creation of feed forward and recurrent neural models in TensorFlow.</p>
                               </span>
                             </span>
@@ -235,7 +235,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal2">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>NN Trainer Library</h4>
+                                <h4>Battleship</h4>
                                 <p class="mb-0">A library for automatic supervised training of neural models.</p>
                               </span>
                             </span>
@@ -246,7 +246,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal3">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>NN Experiments</h4>
+                                <h4>Thermostat Display</h4>
                                 <p class="mb-0">A collection of various neural network models in TensorFlow.</p>
                               </span>
                             </span>
@@ -257,7 +257,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal4">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Collage Generator</h4>
+                                <h4>RateMyRental</h4>
                                 <p class="mb-0">Intelligently draws a message with images.</p>
                               </span>
                             </span>
@@ -268,7 +268,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal5">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>OpenGL Game Engine</h4>
+                                <h4>Earthquake Visualizer</h4>
                                 <p class="mb-0">A custom game engine including dynamic lighting, terrain, and static and dynamic objects.</p>
                               </span>
                             </span>
@@ -290,7 +290,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal7">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Seam Carver</h4>
+                                <h4>Art Rendering</h4>
                                 <p class="mb-0">An application for content-aware image resizing.</p>
                               </span>
                             </span>
@@ -301,7 +301,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal8">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Object Tracker</h4>
+                                <h4>Random Maze Simulator and Solver</h4>
                                 <p class="mb-0">An object recognition and tracking tool.</p>
                               </span>
                             </span>
@@ -312,7 +312,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal9">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Audio Analyzer</h4>
+                                <h4>Sneaker Monitors</h4>
                                 <p class="mb-0">An audio analyzer and controller for an Arduino-driven LED strip.</p>
                               </span>
                             </span>
