--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="text-primary">Tran</span>
                     </h1>
                     <div class="subheading mb-5">
-                        9298 Creek Way Savage, MN 55378 · (612) 735-7783 ·
+                        Software Enginner @ Target · (612) 735-7783 ·
                         <a href="mailto:name@email.com">stran102000@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
@@ -58,7 +58,7 @@
                     <p class="lead mb-5">
                         Fast-forward to today, I have had the privilege of being a Teaching Assistant at the University of
                         Minnesota for almost 2 years, Interning at a huge corporation, and being a part of Hackathon. My main
-                        focus as of today is designing and maintaining new software for the RFID team for Target.
+                        focus as of today is designing and maintaining new software for the RFID team at Target.
                     </p>
                     <p class="lead mb-5">
                         In my free time I enjoy boating out on the lake with my friends in the summer. In the winter I also like
@@ -320,12 +320,7 @@
                           </a>
                         </div>
                       </div>
-
-
-                    
-                    <p> Example: Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
+                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
