Testing projects clickable boxes

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                           <a class="portfolio-item" data-toggle="modal" href="#portfolioModal6">
                             <span class="caption">
                               <span class="caption-content">
-                                <h4>Ray Casting Simulation</h4>
+                                <h4>Portfolio Website</h4>
                                 <p class="mb-0">A simulation using AI techniques such as ray casting, spatial mapping, Bayesian filtering, pathfinding, etc.</p>
                               </span>
                             </span>
