Testing projects clickable boxes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         Software Enginner @ Target · (612) 735-7783 ·
                         <a href="mailto:name@email.com">stran102000@gmail.com</a>
                     </div>
+                    <h2 class="mb-5">About Me</h2>
                     <p class="lead mb-5">
                         Hello! My name is Steven and I enjoy creating things that make people laugh, have fun, or make their
                         lives a little bit easier. My interest in software started back in 2013 when I decided to try and
